games swiper + view list

--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "@nuxt/devtools": "latest",
     "nuxt": "^3.7.0",
     "sass": "^1.66.1"
+  },
+  "dependencies": {
+    "swiper": "^10.2.0"
   }
 }
