--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "autoprefixer": "^10.4.15",
     "nuxt": "^3.7.0",
-    "sass": "^1.66.1"
+    "postcss": "^8.4.30",
+    "sass": "^1.66.1",
+    "tailwindcss": "^3.3.3"
   },
   "dependencies": {
     "swiper": "^10.2.0"
