--- a/package.json
+++ b/package.json
@@ -17,7 +17,14 @@
     "tailwindcss": "^3.3.3"
   },
   "dependencies": {
+    "@pinia-plugin-persistedstate/nuxt": "^1.1.2",
+    "@pinia/nuxt": "^0.4.11",
     "@vueform/vueform": "^1.3.3",
+    "axios": "^1.5.0",
+    "pinia": "^2.1.6",
     "swiper": "^10.2.0"
+  },
+  "overrides": {
+    "vue": "latest"
   }
 }
