--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.0.18",
     "@pinia/nuxt": "^0.4.11",
-    "@vueform/vueform": "^1.3.3",
+    "@vueform/nuxt": "^1.0.0",
     "axios": "^1.5.0",
     "pinia": "^2.1.6",
     "swiper": "^10.2.0",
