--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "tailwindcss": "^3.3.3"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^40.0.0",
+    "@ckeditor/ckeditor5-upload": "^40.0.0",
+    "@ckeditor/ckeditor5-vue": "^5.1.0",
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.0.18",
     "@pinia/nuxt": "^0.4.11",
+    "axios": "^1.5.1",
     "pinia": "^2.1.6",
     "swiper": "^10.2.0",
     "vue3-toastify": "^0.1.12"
