--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
     "no-useless-escape": "off",
     "import/order": "off",
     "vue/require-default-prop": "off",
+    "vue/no-v-html": "off",
     "prettier/prettier": [
       "error",
       {
