--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@heroicons/vue": "^2.0.18",
     "@pinia/nuxt": "^0.4.11",
     "axios": "^1.5.1",
+    "class-variance-authority": "^0.7.0",
     "pinia": "^2.1.6",
     "swiper": "^10.2.0",
     "vue3-toastify": "^0.1.12"
