--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "class-variance-authority": "^0.7.0",
     "nuxt-vue3-google-signin": "^0.0.9",
     "pinia": "^2.1.6",
+    "vue3-carousel-nuxt": "^1.1.0",
     "vue3-toastify": "^0.1.12"
   },
   "overrides": {
